{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 35,
  "lineage": "cb89faff-eced-c3fe-1adf-05a09ca69882",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad7651e2955778bf",
            "association_id": "eipassoc-0286433ee62aff56f",
            "domain": "vpc",
            "id": "eipalloc-0ad7651e2955778bf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dfafcfbc27931c39",
            "private_dns": "ip-10-0-0-220.ec2.internal",
            "private_ip": "10.0.0.220",
            "public_dns": "ec2-44-215-215-42.compute-1.amazonaws.com",
            "public_ip": "44.215.215.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "orlando-nat1"
            },
            "tags_all": {
              "Name": "orlando-nat1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebf9308d5ea0c62d",
            "association_id": "eipassoc-0ff7e55c052c9b0de",
            "domain": "vpc",
            "id": "eipalloc-0ebf9308d5ea0c62d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fd1f1a618c449ebb",
            "private_dns": "ip-10-0-1-171.ec2.internal",
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-3-216-129-16.compute-1.amazonaws.com",
            "public_ip": "3.216.129.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "orlando-nat2"
            },
            "tags_all": {
              "Name": "orlando-nat2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad1bd117a5de2173",
            "association_id": "eipassoc-0ea6c4eec34517322",
            "domain": "vpc",
            "id": "eipalloc-0ad1bd117a5de2173",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d3e2c70ea2dd93ba",
            "private_dns": "ip-10-0-2-98.ec2.internal",
            "private_ip": "10.0.2.98",
            "public_dns": "ec2-18-210-136-44.compute-1.amazonaws.com",
            "public_ip": "18.210.136.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "orlando-nat3"
            },
            "tags_all": {
              "Name": "orlando-nat3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a0cd9728546d178",
            "arn": "arn:aws:ec2:us-east-1:007221994830:instance/i-06e876315d5766946",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e876315d5766946",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-may",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00283eb3bbcf02830",
            "private_dns": "ip-10-0-0-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093577bf55b9bf4fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbb600ac1e2441b2",
            "tags": {
              "Name": "orlando-public"
            },
            "tags_all": {
              "Name": "orlando-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1d3462e9f38034c"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a0cd9728546d178",
            "arn": "arn:aws:ec2:us-east-1:007221994830:instance/i-093a9eab1891a599f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "orlando",
            "id": "i-093a9eab1891a599f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-may",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085fcb75358a313ee",
            "private_dns": "ip-10-0-0-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.66",
            "public_ip": "3.231.162.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-064f7cd503071ed04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbb600ac1e2441b2",
            "tags": {
              "Name": "orlando-public"
            },
            "tags_all": {
              "Name": "orlando-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1d3462e9f38034c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.main",
            "aws_iam_role.main",
            "aws_security_group.public",
            "aws_subnet.public",
            "data.aws_ami.amazonlinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:internet-gateway/igw-093471e79e03162f2",
            "id": "igw-093471e79e03162f2",
            "owner_id": "007221994830",
            "tags": {
              "Name": "orlando"
            },
            "tags_all": {
              "Name": "orlando"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad7651e2955778bf",
            "association_id": "eipassoc-0286433ee62aff56f",
            "connectivity_type": "public",
            "id": "nat-077d051e8b3e62ef1",
            "network_interface_id": "eni-0dfafcfbc27931c39",
            "private_ip": "10.0.0.220",
            "public_ip": "44.215.215.42",
            "subnet_id": "subnet-0fbb600ac1e2441b2",
            "tags": {
              "Name": "orlando-main1"
            },
            "tags_all": {
              "Name": "orlando-main1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebf9308d5ea0c62d",
            "association_id": "eipassoc-0ff7e55c052c9b0de",
            "connectivity_type": "public",
            "id": "nat-0293d4dd8487005e4",
            "network_interface_id": "eni-0fd1f1a618c449ebb",
            "private_ip": "10.0.1.171",
            "public_ip": "3.216.129.16",
            "subnet_id": "subnet-048cee64972a4ec3d",
            "tags": {
              "Name": "orlando-main2"
            },
            "tags_all": {
              "Name": "orlando-main2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad1bd117a5de2173",
            "association_id": "eipassoc-0ea6c4eec34517322",
            "connectivity_type": "public",
            "id": "nat-0639abb7e736f2df5",
            "network_interface_id": "eni-0d3e2c70ea2dd93ba",
            "private_ip": "10.0.2.98",
            "public_ip": "18.210.136.44",
            "subnet_id": "subnet-029580dd2aee3a434",
            "tags": {
              "Name": "orlando-main3"
            },
            "tags_all": {
              "Name": "orlando-main3"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:route-table/rtb-01455e97e736b2997",
            "id": "rtb-01455e97e736b2997",
            "owner_id": "007221994830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077d051e8b3e62ef1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando-private1"
            },
            "tags_all": {
              "Name": "orlando-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:route-table/rtb-00ee3cd4021c313a1",
            "id": "rtb-00ee3cd4021c313a1",
            "owner_id": "007221994830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0293d4dd8487005e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando-private2"
            },
            "tags_all": {
              "Name": "orlando-private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:route-table/rtb-0ff3d22410dd8054c",
            "id": "rtb-0ff3d22410dd8054c",
            "owner_id": "007221994830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0639abb7e736f2df5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando-private3"
            },
            "tags_all": {
              "Name": "orlando-private3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:route-table/rtb-01835694e4edc6361",
            "id": "rtb-01835694e4edc6361",
            "owner_id": "007221994830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093471e79e03162f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "orlando"
            },
            "tags_all": {
              "Name": "orlando"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a50f7803858fd82f",
            "route_table_id": "rtb-01455e97e736b2997",
            "subnet_id": "subnet-00cce8b5343b29778"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dbad7cdd67e9809",
            "route_table_id": "rtb-00ee3cd4021c313a1",
            "subnet_id": "subnet-0ada2f02411c49290"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064dda12fd4871de5",
            "route_table_id": "rtb-0ff3d22410dd8054c",
            "subnet_id": "subnet-081191bf2a3cec050"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d76446c7cf42c5bf",
            "route_table_id": "rtb-01835694e4edc6361",
            "subnet_id": "subnet-0fbb600ac1e2441b2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a9e1d18ef75e2d9",
            "route_table_id": "rtb-01835694e4edc6361",
            "subnet_id": "subnet-048cee64972a4ec3d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af1f92080ba1eab4",
            "route_table_id": "rtb-01835694e4edc6361",
            "subnet_id": "subnet-029580dd2aee3a434"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:security-group/sg-090d3d1a5273b7fd7",
            "description": "Allow VPC traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090d3d1a5273b7fd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "orlando-private",
            "name_prefix": "",
            "owner_id": "007221994830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "orlando-private"
            },
            "tags_all": {
              "Name": "orlando-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:security-group/sg-0b1d3462e9f38034c",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1d3462e9f38034c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "98.206.24.195/32"
                ],
                "description": "SSH from public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "orlando-piblic",
            "name_prefix": "",
            "owner_id": "007221994830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "orlando-public"
            },
            "tags_all": {
              "Name": "orlando-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:subnet/subnet-00cce8b5343b29778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cce8b5343b29778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007221994830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-private1"
            },
            "tags_all": {
              "Name": "orlando-private1"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:subnet/subnet-0ada2f02411c49290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ada2f02411c49290",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007221994830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-private2"
            },
            "tags_all": {
              "Name": "orlando-private2"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:subnet/subnet-081191bf2a3cec050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081191bf2a3cec050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007221994830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-private3"
            },
            "tags_all": {
              "Name": "orlando-private3"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:subnet/subnet-0fbb600ac1e2441b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb600ac1e2441b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007221994830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-public1"
            },
            "tags_all": {
              "Name": "orlando-public1"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:subnet/subnet-048cee64972a4ec3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048cee64972a4ec3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007221994830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-public2"
            },
            "tags_all": {
              "Name": "orlando-public2"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:subnet/subnet-029580dd2aee3a434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029580dd2aee3a434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007221994830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "orlando-public3"
            },
            "tags_all": {
              "Name": "orlando-public3"
            },
            "vpc_id": "vpc-0f97801d7c6a16097"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007221994830:vpc/vpc-0f97801d7c6a16097",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090fb1057afeea38b",
            "default_route_table_id": "rtb-0715b5c7a913f2211",
            "default_security_group_id": "sg-07c3a9caa2ea94dbb",
            "dhcp_options_id": "dopt-06c4d626b32dda521",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f97801d7c6a16097",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0715b5c7a913f2211",
            "owner_id": "007221994830",
            "tags": {
              "Name": "orlando"
            },
            "tags_all": {
              "Name": "orlando"
            }
          }
        }
      ]
    }
  ]
}